--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -22,6 +22,13 @@
   border: 1px solid var(--black, #000);
 }
 
+.logo {
+  font-family: "Sansation", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
 .selectInput {
   width: 100%;
 }
