--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
+@import url("https://fonts.cdnfonts.com/css/sansation");
 
 :root {
   --black: #000;
@@ -6,6 +7,9 @@
   --light-yellow: #fff1c0;
   --white: #fff;
   --yellow: #fac917;
+  --red: #ff3c3c;
+  --light-grey: #d9d9d9;
+  --green: #3cff4f;
 }
 
 body {
