--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,45 @@
 .container {
+  background-color: var(--light-yellow);
+  padding: 50px 0 62px;
+}
+
+.footerList {
+  width: 850px;
+  margin: 0 auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 115px;
+}
+
+.title {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  margin-bottom: 25px;
+}
+
+.link:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.link {
+  line-height: 1.5;
+}
+
+.input {
+  width: 305px;
+  margin-bottom: 25px;
+  padding: 10px 18px;
+  border-radius: 20px;
+  border: 1px solid var(--grey);
+  background: var(--white);
+}
+
+.input::placeholder {
+  color: var(--grey);
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.btnWrap {
+  width: 172px;
 }
