--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,7 +2,12 @@
   background-color: var(--yellow);
   border-radius: 20px;
   border: var(--yellow);
-  line-height: 1.5;
+
+  font-family: Montserrat;
+  font-size: 16px;
+  line-height: 1.22;
+
   padding: 10px;
   width: 100%;
+  height: 100%;
 }
