--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,7 @@
 .footerList {
   width: 850px;
   margin: 0 auto;
+
   display: flex;
   gap: 115px;
 }
@@ -13,7 +14,8 @@
 .title {
   font-size: 16px;
   font-weight: 600;
-  line-height: 1.5;
+  line-height: 1.22;
+
   margin-bottom: 25px;
 }
 
@@ -22,22 +24,26 @@
 }
 
 .link {
-  line-height: 1.5;
+  line-height: 1.22;
 }
 
 .input {
   width: 305px;
   margin-bottom: 25px;
   padding: 10px 18px;
+
   border-radius: 20px;
   border: 1px solid var(--grey);
   background: var(--white);
+
+  font-family: Montserrat;
+  font-size: 16px;
+  line-height: 1.22;
 }
 
 .input::placeholder {
   color: var(--grey);
   font-size: 16px;
-  line-height: 1.5;
 }
 
 .btnWrap {
