--- a/src/pages/LogIn/LogIn.module.css
+++ b/src/pages/LogIn/LogIn.module.css
@@ -4,13 +4,8 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: start;
   gap: 132px;
-}
-
-.formWrap {
-  display: flex;
-  flex-direction: column;
-  gap: 80px;
 }
 
 .title {
@@ -18,6 +13,19 @@
   font-weight: 400;
   line-height: 1.225;
   text-align: center;
+  margin-bottom: 80px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+
+.inputWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 .label {
@@ -27,10 +35,6 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-}
-
-.label:first-child {
-  margin-bottom: 50px;
 }
 
 .input {
