--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -1,5 +1,57 @@
 .container {
+  width: 1440px;
+  padding: 27px 80px 45px 77px;
+  margin: 0 auto;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 22px;
+}
+
+.title {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.225;
   text-align: center;
+
+  margin-bottom: 50px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  width: 100%;
+}
+
+.inputWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 21px;
+  row-gap: 25px;
+}
+
+.label {
+  width: calc((100% - 21px) / 2);
+
+  font-size: 28px;
+  line-height: 1.225;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  height: 79px;
+  width: 100%;
+  padding: 10px 23px;
+
+  border-radius: 20px;
+  border: 1px solid var(--black);
+
+  font-size: 28px;
+  line-height: 1.225;
 }
 
 .logInLink {
@@ -11,6 +63,7 @@
 }
 
 .linkWrap {
+  text-align: center;
   font-size: 20px;
   line-height: 1.2;
 }
