--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,3 +1,67 @@
+.container {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 27px 80px 80px 80px;
+}
+
 .title {
-  text-align: center;
+  font-family: "Sansation", sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.12;
+
+  margin-bottom: 50px;
+}
+
+.card {
+  padding: 12px;
+  border-radius: 30px;
+  border: 1px solid var(--black);
+  background: var(--white);
+
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+
+  line-height: 1.22;
+}
+
+.imageWrap {
+  position: relative;
+}
+
+.addToFavourites {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  bottom: -17px;
+  right: -7px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: var(--yellow);
+}
+
+.cardBottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btnWrap {
+  width: 112px;
+}
+
+.moreBtn {
+  color: var(--grey);
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.22;
+  text-decoration-line: underline;
+
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
