added styles to home page unregistered

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -87,3 +87,57 @@
   background-color: var(--light-yellow);
   padding: 44px 0;
 }
+
+.reviewsList {
+  display: flex;
+  gap: 20px;
+}
+
+.reviewCard {
+  padding: 10px;
+  border-radius: 30px;
+  background: var(--white);
+
+  display: flex;
+  align-items: start;
+  gap: 20px;
+
+  line-height: 1.22;
+}
+
+.reviewTitle {
+  margin-bottom: 12px;
+}
+
+/* ===================================================about us===================== */
+
+.aboutSection {
+  padding: 116px 0 86px 0;
+}
+
+.aboutContentWrap {
+  display: flex;
+  align-items: start;
+  gap: 21px;
+}
+
+.aboutContentList li {
+  padding-left: 12px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.aboutContentList li::before {
+  content: "";
+  display: block;
+  width: 2px;
+  height: 2px;
+  background-color: var(--black);
+}
+
+.aboutContent {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
