--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -108,3 +108,28 @@
 .navigateItem {
   line-height: 1.22;
 }
+
+/* =========================Modal=============== */
+
+.categoryList {
+  width: 389px;
+  padding: 16px 23px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.category {
+  line-height: 1.2;
+  cursor: pointer;
+}
+
+.category:not(:last-child):after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--grey);
+  display: block;
+  margin-top: 10px;
+}
