--- a/src/pages/Item/Item.module.css
+++ b/src/pages/Item/Item.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 1440px;
   margin: 0 auto;
-  padding: 0 80px;
+  padding: 0 80px 80px;
 }
 
 .breadcrumbs {
@@ -16,4 +16,124 @@
 .breadcrumbs span::after {
   content: "/";
   padding-left: 6px;
+}
+
+.contentWrapper {
+  display: flex;
+  align-items: start;
+  gap: 20px;
+}
+
+.imagesWrapper {
+  width: 413px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 19px;
+  row-gap: 27px;
+}
+
+.infoWrapper p {
+  color: var(--black);
+  font-family: "Sansation", sans-serif;
+  font-size: 28px;
+  line-height: 1.12;
+}
+
+.generalInfo {
+  padding-top: 30px;
+  margin-bottom: 43px;
+}
+
+.generalInfo p {
+  display: flex;
+  gap: 20px;
+}
+
+.generalInfo p:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.sizesWrapper {
+  display: flex;
+  gap: 126px;
+  margin-bottom: 40px;
+}
+
+.sizesWrapper p {
+  margin-bottom: 20px;
+}
+
+.boxWrapper {
+  display: flex;
+  gap: 20px;
+}
+
+.boxWrapper .box {
+  cursor: pointer;
+}
+
+.box {
+  width: 89px;
+  height: 79px;
+  border-radius: 20px;
+  border: 1px solid var(--black, #000);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 28px;
+  line-height: 1.12;
+}
+
+.quantity {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.quantity span {
+  font-size: 48px;
+  font-weight: 200;
+  line-height: 1.22;
+  cursor: pointer;
+}
+
+.btnWrapper {
+  display: flex;
+  gap: 20px;
+}
+
+.btnWrapper div {
+  width: 413px;
+  height: 79px;
+}
+
+/* ======================================Modal======== */
+
+.modalContainer {
+  padding: 70px 60px 40px;
+  text-align: center;
+  position: relative;
+}
+
+.closeIcon {
+  position: absolute;
+  top: 18px;
+  right: 18px;
+  cursor: pointer;
+}
+
+.modalContainer p {
+  margin-bottom: 67px;
+
+  color: var(--black);
+  font-family: "Sansation", sans-serif;
+  font-size: 28px;
+  line-height: 1.12;
+}
+
+.modalBtnWrap {
+  width: 414px;
+  height: 79px;
+  margin: 0 auto;
 }
