--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -20,6 +20,7 @@
 }
 
 .card {
+  position: relative;
   width: calc((100% - 60px) / 4);
   padding: 12px;
   border-radius: 30px;
@@ -34,7 +35,13 @@
 }
 
 .imageWrap {
-  position: relative;
+  border-radius: 17px;
+  overflow: hidden;
+  height: 280px;
+}
+
+.imageWrap img {
+  height: 280px;
 }
 
 .addToFavourites {
@@ -43,13 +50,17 @@
   justify-content: center;
 
   position: absolute;
-  bottom: -17px;
-  right: -7px;
+  top: 249px;
+  right: 5px;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   background-color: var(--yellow);
   cursor: pointer;
+}
+
+.description {
+  flex-grow: 1;
 }
 
 .salePrice {
