--- a/src/pages/Category/Category.module.css
+++ b/src/pages/Category/Category.module.css
@@ -21,14 +21,12 @@
 /* =========================================================card styles============ */
 .caruselWrap {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 20px;
-  row-gap: 50px;
+  gap: 20px;
 }
 
 .card {
+  position: relative;
   width: calc((100% - 60px) / 4);
-
   padding: 12px;
   border-radius: 30px;
   border: 1px solid var(--black);
@@ -42,7 +40,13 @@
 }
 
 .imageWrap {
-  position: relative;
+  border-radius: 17px;
+  overflow: hidden;
+  height: 280px;
+}
+
+.imageWrap img {
+  height: 280px;
 }
 
 .addToFavourites {
@@ -51,13 +55,24 @@
   justify-content: center;
 
   position: absolute;
-  bottom: -17px;
-  right: -7px;
+  top: 249px;
+  right: 5px;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   background-color: var(--yellow);
   cursor: pointer;
+}
+
+.description {
+  flex-grow: 1;
+}
+
+.salePrice {
+  color: var(--grey);
+  text-decoration: line-through;
+  margin-left: 12px;
+  display: inline-block;
 }
 
 .cardBottom {
@@ -82,15 +97,32 @@
   outline: none;
 }
 
-.discontSection {
-  background-color: var(--light-yellow);
-  padding: 50px 0 69px 0;
+/* ======================================Modal======== */
+
+.modalContainer {
+  padding: 70px 60px 40px;
+  text-align: center;
+  position: relative;
 }
 
-.categoryTop {
-  padding-bottom: 80px;
+.closeIcon {
+  position: absolute;
+  top: 18px;
+  right: 18px;
+  cursor: pointer;
 }
 
-.categoryBottom {
-  padding: 80px 0;
+.modalContainer p {
+  margin-bottom: 67px;
+
+  color: var(--black);
+  font-family: "Sansation", sans-serif;
+  font-size: 28px;
+  line-height: 1.12;
+}
+
+.modalBtnWrap {
+  width: 414px;
+  height: 79px;
+  margin: 0 auto;
 }
