--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,8 +1,3 @@
-.caruselWrap {
-  display: flex;
-  gap: 20px;
-}
-
 .card {
   position: relative;
   width: calc((100% - 60px) / 4);
@@ -19,13 +14,16 @@
 }
 
 .imageWrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--light-yellow);
   border-radius: 17px;
   overflow: hidden;
   height: 280px;
 }
 
 .imageWrap img {
-  height: 280px;
 }
 
 .addToFavourites {
