--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -13,6 +13,11 @@
   margin-bottom: 50px;
 }
 
+.caruselWrap {
+  display: flex;
+  gap: 20px;
+}
+
 /* =========================================================newArrivalsSection==== */
 .newArrivalsSection {
   padding: 27px 0 80px 0;
