--- a/src/pages/Payment/Payment.module.css
+++ b/src/pages/Payment/Payment.module.css
@@ -24,6 +24,86 @@
   margin: 0 auto;
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.title {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.22;
+}
+
+.formInner {
+  display: flex;
+  column-gap: 20px;
+  row-gap: 22px;
+  flex-wrap: wrap;
+}
+
+.inputWrapper {
+  width: calc((100% - 20px) / 2);
+  display: flex;
+  gap: 20px;
+}
+
+.inputWrapper:last-child div {
+  width: calc((100% - 20px) / 2);
+}
+
+.inputWrapper:nth-child(2) {
+  align-self: flex-end;
+  justify-content: center;
+}
+
+.inputFieldWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+
+  font-size: 28px;
+  line-height: 1.22;
+}
+
+.input,
+.radioInput {
+  height: 79px;
+  border-radius: 20px;
+  border: 1px solid var(--black);
+}
+
+.input {
+  padding: 0 23px;
+
+  font-size: 28px;
+  line-height: 1.22;
+}
+
+.radioInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 165px;
+}
+
+.checkbox {
+  padding-left: 217px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
+  font-size: 24px;
+  line-height: 1.22;
+}
+
+.checkbox input {
+  width: 40px;
+  height: 40px;
+}
+
 /* ======================================Modal======== */
 
 .modalContainer {
