adde react multi carousel

--- a/src/pages/Category/Category.module.css
+++ b/src/pages/Category/Category.module.css
@@ -37,6 +37,10 @@
   gap: 20px;
 }
 
+.categoryBottom {
+  padding: 80px 0;
+}
+
 /* ======================================Modal======== */
 
 .modalContainer {
