--- a/src/components/Favourites/Favourites.module.css
+++ b/src/components/Favourites/Favourites.module.css
@@ -1,94 +1,13 @@
-.searchWrap {
-  width: 100%;
-  padding: 6px 6px 6px 23px;
+.searchWrapper {
+  width: 522px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
 
+.carouselWrap {
   display: flex;
-  justify-content: space-between;
-
-  border-radius: 30px;
-  border: 1px solid var(--black, #000);
-  background-color: var(--white);
-}
-
-.input {
-  height: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-  border: none;
-  outline: none;
-
-  color: var(--black, #000);
-  font-family: Montserrat;
-  font-size: 16px;
-  line-height: 1.22;
-}
-
-.input::placeholder {
-  color: var(--grey);
-}
-
-.categoryBtn {
-  padding: 10px;
-
-  display: flex;
-  gap: 8px;
-
-  background-color: transparent;
-  color: var(--black);
-
-  border: none;
-  outline: none;
-
-  font-family: Montserrat;
-  font-size: 16px;
-  line-height: 1.22;
-}
-
-.categoryBtn:before {
-  content: "";
-  background-color: var(--black);
-  height: 22px;
-  width: 1px;
-  display: block;
-}
-
-.categoryBtn:after {
-  content: "";
-  width: 10px;
-  height: 10px;
-  border-right: 1px solid #000;
-  border-bottom: 1px solid #000;
-  border-radius: 0 0 03px;
-  transform: rotate(45deg);
-  display: block;
-}
-
-.btnWrap {
-  width: 112px;
-}
-
-/* =========================Modal=============== */
-
-.categoryList {
-  width: 389px;
-  padding: 16px 23px;
-
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.category {
-  line-height: 1.2;
-  cursor: pointer;
-}
-
-.category:not(:last-child):after {
-  content: "";
-  width: 100%;
-  height: 1px;
-  background-color: var(--grey);
-  display: block;
-  margin-top: 10px;
+  flex-wrap: wrap;
+  column-gap: 20px;
+  row-gap: 50px;
+  margin-bottom: 80px;
 }
