--- a/src/pages/Account/Account.module.css
+++ b/src/pages/Account/Account.module.css
@@ -5,7 +5,6 @@
 }
 
 .breadcrumbs {
-  margin-bottom: 44px;
   padding-left: 80px;
 }
 
@@ -16,13 +15,14 @@
 
 .inner {
   display: flex;
-  gap: 72px;
+  gap: 20px;
 }
 
 .btnWrapper {
   display: flex;
   flex-direction: column;
   gap: 50px;
+  padding-top: 44px;
 }
 
 .hidden {
