--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -25,6 +25,10 @@
   margin-bottom: 45px;
 }
 
+.imageWrapper {
+  width: 200px;
+}
+
 .mainImageWrap {
   display: flex;
   align-items: center;
@@ -70,6 +74,16 @@
 
 .generalInfo p:not(:last-child) {
   margin-bottom: 20px;
+}
+
+.detailsLink {
+  cursor: pointer;
+  transition: color var(--transition);
+}
+
+.detailsLink:hover,
+.detailsLink:focus {
+  color: var(--yellow);
 }
 
 .form {
