--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -34,6 +34,10 @@
   justify-content: space-between;
 }
 
+.icon {
+  fill: currentColor;
+}
+
 .navigateItem {
   line-height: 1.22;
   transition: color var(--transition);
