--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -10,6 +10,13 @@
   background-color: rgba(0, 0, 0, 0.52);
 }
 
+.container {
+  position: relative;
+  height: 100%;
+  width: 1440px;
+  margin: 0 auto;
+}
+
 .modal {
   position: absolute;
   left: 50%;
