--- a/src/components/SearchhForm/SearchForm.module.css
+++ b/src/components/SearchhForm/SearchForm.module.css
@@ -10,8 +10,19 @@
   background-color: var(--white);
 }
 
+.inputWrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.inputWrapper label {
+  flex-grow: 1;
+}
+
 .input {
   height: 100%;
+  width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
 
@@ -32,6 +43,8 @@
   padding: 10px;
 
   display: flex;
+  flex-grow: 1;
+  align-items: center;
   gap: 8px;
 
   background-color: transparent;
@@ -82,6 +95,12 @@
 .category {
   line-height: 1.2;
   cursor: pointer;
+  transition: color var(--transition);
+}
+
+.category:hover,
+.category:focus {
+  color: var(--yellow);
 }
 
 .category:not(:last-child):after {
