--- a/src/components/SearchhForm/SearchForm.module.css
+++ b/src/components/SearchhForm/SearchForm.module.css
@@ -14,6 +14,7 @@
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .inputWrapper label {
@@ -40,17 +41,20 @@
 }
 
 .categoryBtn {
-  padding: 10px;
+  padding: 0 10px;
+  height: 22px;
+  width: 250px;
 
   display: flex;
   flex-grow: 1;
   align-items: center;
-  gap: 8px;
+  justify-content: space-between;
+  /* gap: 8px; */
 
   background-color: transparent;
   color: var(--black);
-
   border: none;
+  border-left: 1px solid var(--black);
   outline: none;
 
   font-family: Montserrat;
@@ -58,13 +62,13 @@
   line-height: 1.22;
 }
 
-.categoryBtn:before {
+/* .categoryBtn:before {
   content: "";
   background-color: var(--black);
   height: 22px;
   width: 1px;
   display: block;
-}
+} */
 
 .categoryBtn:after {
   content: "";
@@ -75,6 +79,7 @@
   border-radius: 0 0 03px;
   transform: rotate(45deg);
   display: block;
+  margin-left: 4px;
 }
 
 .btnWrap {
