--- a/src/pages/Payment/Payment.module.css
+++ b/src/pages/Payment/Payment.module.css
@@ -68,8 +68,16 @@
   line-height: 1.22;
 }
 
+.hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 .input,
-.radioInput {
+.radioInput label {
   height: 79px;
   border-radius: 20px;
   border: 1px solid var(--black);
@@ -82,11 +90,17 @@
   line-height: 1.22;
 }
 
-.radioInput {
+.radioInput label {
+  cursor: pointer;
+  width: 165px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 165px;
+}
+
+.radioInput input:checked + label,
+.radioInput input:focus + label {
+  border-color: #fac917;
 }
 
 .checkbox {
@@ -102,6 +116,25 @@
 .checkbox input {
   width: 40px;
   height: 40px;
+}
+
+.inputFieldWrapper input:not(:focus):not(:placeholder-shown):invalid {
+  border-color: var(--red);
+}
+
+.inputWrapper,
+.cvvWrap {
+  position: relative;
+}
+
+.error {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+
+  color: var(--red);
+  font-size: 16px;
+  line-height: 1.22;
 }
 
 /* ======================================Modal======== */
