--- a/src/pages/AdminItemDedails/AdminItemDetails.module.css
+++ b/src/pages/AdminItemDedails/AdminItemDetails.module.css
@@ -5,8 +5,11 @@
 }
 
 .breadcrumbs {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 27px;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
 }
 
 .breadcrumbs span {
@@ -16,6 +19,34 @@
 .breadcrumbs span::after {
   content: "/";
   padding-left: 6px;
+}
+
+.link {
+  transition: color var(--transition);
+}
+
+.link:hover {
+  color: var(--yellow);
+}
+
+.menu {
+  padding: 0 8px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.menu p {
+  width: 7px;
+  height: 7px;
+  background-color: var(--black);
+  border-radius: 50%;
+  transition: background-color var(--transition);
+}
+
+.menu:hover p {
+  background-color: var(--yellow);
 }
 
 .contentWrapper {
@@ -159,4 +190,48 @@
   margin-top: 44px;
   width: 100%;
   height: 79px;
+}
+
+/* ======================menu modal=========== */
+
+.targetArrow {
+  background-color: var(--white);
+
+  width: 40px;
+  height: 40px;
+
+  transform: rotate(45deg);
+  position: absolute;
+  top: -20px;
+  right: 35px;
+
+  border-top: 1px solid var(--black);
+  border-left: 1px solid var(--black);
+  border-top-left-radius: 10px;
+}
+
+.modalList {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  position: relative;
+  width: 390px;
+  padding: 29px 38px 34px;
+}
+
+.modalList li {
+  font-family: Sansation;
+  font-size: 28px;
+  line-height: 1.12;
+
+  cursor: pointer;
+  transition: color var(--transition);
+}
+
+.modalList li:hover {
+  color: var(--yellow);
+}
+
+.modalList li:last-child {
+  color: var(--red);
 }
