--- a/src/pages/AdminNewItem/AdminNewItem.module.css
+++ b/src/pages/AdminNewItem/AdminNewItem.module.css
@@ -68,12 +68,29 @@
 }
 
 .form label {
+  position: relative;
   display: flex;
-  /* flex-direction: column;
-  row-gap: 25px; */
+  flex-direction: column;
+  row-gap: 25px;
 
   font-size: 28px;
   line-height: 1.12;
+}
+
+.form label:nth-child(1),
+.form label:nth-child(3),
+.form label:nth-child(6) {
+  width: 522px;
+}
+
+.form label:nth-child(2),
+.form label:nth-child(4),
+.form label:nth-child(5) {
+  width: 305px;
+}
+
+.form label:nth-child(7) {
+  width: 847px;
 }
 
 .form input,
@@ -85,13 +102,25 @@
   padding: 10px 23px;
 }
 
+.form label:nth-child(5) input {
+  padding-right: 60px;
+}
+
 .form input {
   height: 79px;
 }
 
 .form textarea {
   height: 446px;
-  min-width: 100%;
+  width: 847px;
+  margin-bottom: 25px;
+}
+
+.arrow {
+  position: absolute;
+  bottom: 22px;
+  right: 23px;
+  cursor: pointer;
 }
 
 .btnWrapper {
@@ -100,4 +129,84 @@
   margin: 0 auto;
   width: 522px;
   height: 79px;
+}
+
+/* =========================Modals=============== */
+
+.categoryList {
+  width: 389px;
+  padding: 16px 23px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.sizesListsWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.sizesList {
+  width: 508px;
+  background-color: var(--white);
+  border-radius: 20px;
+  border: 1px solid var(--black);
+  padding: 16px 23px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.category {
+  line-height: 1.2;
+  cursor: pointer;
+  transition: color var(--transition);
+}
+
+.sizes {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  line-height: 1.22;
+  cursor: pointer;
+  transition: color var(--transition);
+}
+
+.sizes:hover,
+.sizes:focus,
+.category:hover,
+.category:focus {
+  color: var(--yellow);
+}
+
+.category:not(:last-child):after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--grey);
+  display: block;
+  margin-top: 10px;
+}
+
+.sizes:not(:last-child):after {
+  content: "";
+  width: 1px;
+  height: 20px;
+  background-color: var(--grey);
+  display: block;
+  margin-left: 10px;
+}
+
+.checkbox {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
+.checkbox:checked + label {
+  color: var(--yellow);
 }
