new item add form styles

--- a/src/pages/AdminNewItem/AdminNewItem.module.css
+++ b/src/pages/AdminNewItem/AdminNewItem.module.css
@@ -110,6 +110,10 @@
   height: 79px;
 }
 
+.form input:disabled {
+  background-color: transparent;
+}
+
 .form textarea {
   height: 446px;
   width: 847px;
