--- a/src/pages/AdminItemDetails/AdminItemDetails.module.css
+++ b/src/pages/AdminItemDetails/AdminItemDetails.module.css
@@ -223,7 +223,7 @@
   gap: 25px;
   position: relative;
   width: 390px;
-  padding: 29px 38px 34px;
+  padding: 20px 30px;
 }
 
 .modalList li {
@@ -243,7 +243,7 @@
   color: var(--red);
 }
 
-/* ======================================doscont modal======== */
+/* ======================================discount modal======== */
 
 .modalContainer {
   padding: 70px 60px 40px;
@@ -295,4 +295,10 @@
   width: 414px;
   height: 79px;
   margin: 0 auto;
+}
+
+/* =============================================================== */
+
+.removalTitle {
+  padding-bottom: 30px;
 }
