--- a/src/pages/AdminNewItem/AdminNewItem.module.css
+++ b/src/pages/AdminNewItem/AdminNewItem.module.css
@@ -25,6 +25,7 @@
 }
 
 .mainImageWrap {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,6 +45,7 @@
 }
 
 .imageList li {
+  position: relative;
   width: calc((100% - 20px) / 2);
   height: 197px;
   display: flex;
@@ -55,9 +57,22 @@
   background: var(--light-yellow);
 }
 
+.mainImageWrap label,
+.imageList label,
+.hidden {
+  cursor: pointer;
+  opacity: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+}
+
 .mainImageWrap img,
 .imageList img {
-  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .form {
